--- a/index.html
+++ b/index.html
@@ -1,96 +1,131 @@
 <!doctype html>
 <html lang="es">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <title>Registro v2</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content>
+    <title>Registro</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
 
-<body class="bg-light">
+  <body class="bg-light">
 
-  <div class="container">
-    <main>
-      <form action="#" method="get" class="row mt-4">
-        <div class="col">
-          <h1 class="mb-3">Registro</h1>
-          <hr class="my-4">
-          <div class="row g-3">
-            <div class="col-sm-6">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nombre">
-            </div>
+    <div class="container">
+      <main>
+        <div class="row mt-4">
+          <div class="col">
+            <h1 class="mb-3">Registro</h1>
+            <hr class="my-4">
 
-            <div class="col-sm-6">
-              <label for="apellido" class="form-label">Apellido</label>
-              <input type="text" class="form-control" id="apellido">
-            </div>
+            <!-- Agrega la class needs-validation acá para validar x bootstrap y novalidate para bloquear
+            la validación de html -->
+            <form class="row g-3 needs-validation" novalidate
+              name="tuFormulario" id="form">
 
-            <div class="col-12">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email">
-            </div>
+              <div class="col-sm-6">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" required>
+                <!-- Agrega un div para el mensaje de invalidación -->
+                <div class="invalid-feedback">Debe ingresar un nombre.</div>
+              </div>
 
-            <div class="col-sm-6">
-              <label for="password1" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="password1">
-            </div>
+              <div class="col-sm-6">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellido" required>
+                <!-- Agrega un div para el mensaje de invalidación -->
+                <div class="invalid-feedback">Debe ingresar un apellido.</div>
+              </div>
 
-            <div class="col-sm-6">
-              <label for="password2" class="form-label">Repetir contraseña</label>
-              <input type="password" class="form-control" id="password2">
-            </div>
+              <div class="col-12">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+                <!-- Agrega un div para el mensaje de invalidación -->
+                <div class="invalid-feedback">Debe ingresar un email.</div>
+              </div>
 
-            <div class="col-sm-12">
-              <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
-                data-bs-target="#modalTerminos">Términos del servicio</button>
-            </div>
+              <div class="col-sm-6">
+                <label for="password1" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password1"
+                  required minlength="6" required>
+                <!-- Agrega un div para el mensaje de invalidación -->
+                <div class="invalid-feedback">Debe ingresar una contraseña con
+                  al menos 6 caracteres.</div>
+              </div>
 
+              <div class="col-sm-6">
+                <label for="password2" class="form-label">Repetir contraseña</label>
+                <input type="password" class="form-control" id="password2" required>
+                <!-- Agrega un div para el mensaje de invalidación -->
+                <div class="invalid-feedback">Debe ser igual a "contraseña".</div>
+              </div>
 
-            <button class="btn btn-primary" type="submit">Registrarme</button>
+              <!-- Agrega un enlace que desencadenará la apertura del modal -->
+              <a class="link-primary" href="#" id="mostrarModal"
+                data-toggle="modal" data-target="#miModal">Términos
+                del servicio
+              </a>
+              <div class="invalid-feedback" id="error-message"
+                style="display:none">
+                Debe aceptar los términos del servicio.
+              </div>
 
+              <!-- Modal -->
+              <div class="modal" tabindex="-1" id="miModal">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Aceptar términos y condiciones del
+                        servicio</h5>
+                      <button type="button" class="btn-close"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Error, repudiandae laudantium pariatur quod dicta,
+                        ipsam nemo iusto sit, accusantium sunt facilis
+                        voluptatem doloribus itaque quis deserunt fugiat iste
+                        excepturi expedita!</p>
+                    </div>
+                    <div class="modal-footer">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value
+                          id="terminos" required>
+                        <label class="form-check-label" for="terminos">Acepto
+                          los términos y condiciones del servicio.</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
+              <button class="btn btn-primary" type="submit" id="regBtn">Registrarme</button>
+
+            </form>
           </div>
-        </div>
-      </form>
 
-    </main>
+          <!-- jQuery -->
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <footer class="my-5 pt-5 text-muted text-center text-small">
-      <p class="mb-1">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a
-          Programar</a></p>
-      <p class="mb-1">Es un sitio generado con fines estrictamente educativos. No realiza registros ni guarda datos de
-        ningún tipo.</p>
-    </footer>
-  </div>
+          <!-- Bootstrap JS 5 -->
+          <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <div class="modal fade" id="modalTerminos" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5">Términos y condiciones del servicio.</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quasi sapiente voluptatum deserunt?
-            Deleniti, adipisci vitae in quaerat eius nemo optio? Quas at magni saepe cumque. Delectus perspiciatis omnis
-            accusamus.</p>
-        </div>
-        <div class="modal-footer">
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="terminos">
-            <label class="form-check-label" for="terminos">Acepto los términos y condiciones del servicio.</label>
-          </div>
-        </div>
+        </main>
+
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+          <p class="mb-1">Este sitio forma parte de <a
+              href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a
+              Programar</a></p>
+          <p class="mb-1">Es un sitio generado con fines estrictamente
+            educativos. No realiza registros ni guarda datos de
+            ningún tipo.</p>
+        </footer>
       </div>
-    </div>
-  </div>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/validacion.js"></script>
-</body>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/validacion.js"></script>
+    </body>
 
-</html>
+  </html>
